--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 controllers:
-    resource: ../src/Controller/
+    resource: ../src/Interface/Controller/
     type: attribute
+
+index:
+    path: /search
+    controller: App\Interface\Controller\SearchController
