--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,11 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    AMA\Domain\:
+        resource: '../domain/src/'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Interface\Controller\:
+        resource: '../src/Interface/Controller/'
+        tags: ['controller.service_arguments']
