--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,7 @@
-version: "3.8"
+version: '3.8'
+
 services:
-
-  www:
-    build: php
-    container_name: www_docker_symfony
+  web:
+    build: .
     ports:
-      - "8741:80"
-    volumes:
-      - ./php/vhosts:/etc/apache2/sites-enabled
-      - ./:/var/www
-    restart: always
-    networks:
-      - dev
-
-networks:
-  dev:
-
-volumes:
-  db-data:
+      - '8080:80'
